[package]
name = "imgui-glfw-support"
version = "0.4.1"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aloucks/imgui-glfw-support"
documentation = "https://docs.rs/imgui-glfw-support"
keywords = ["imgui", "glfw", "wgpu"]
description = "GLFW support for imgui-rs"

[dependencies]
imgui = "0.8"
glfw = "*"

[features]
vulkan = ["glfw/vulkan"]
image = ["glfw/image"]

[dev-dependencies]
wgpu = "*"
imgui-wgpu = "*"
futures = "*"
